# Real-Time-Rendering

./: CMakeLists.txt  folder_structure.txt
include/: DataBuffer.h  ShaderModule.h  ShaderPipeline.h  VertexBuffer.h
shaders/: FragmentShader.frag  TreeGeometryShader.geo  TreeVertexShader.vert  VertexShader.vert
src/: DataBuffer.cpp  ShaderModule.cpp  ShaderPipeline.cpp  VertexBuffer.cpp  main.cpp
